[tool.poetry]
name = "photofield-ai"
version = "0.1.0"
description = ""
authors = ["Miha Lunar <mlunar@gmail.com>"]
readme = "README.md"
packages = [{include = "photofield_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
clip = {git = "https://github.com/openai/CLIP.git"}
fastapi = "^0.85.0"
ujson = "^5.5.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-multipart = "^0.0.5"
memory-profiler = "^0.60.0"

[tool.poetry.group.torch.dependencies]
torch = {version = "1.12.1", source="torch"}
torchvision = {version = "0.13.1", source="torch"}
tqdm = "^4.64.1"
ftfy = "^6.1.1"
regex = "^2022.9.13"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
